# ClosureOS

./: .gitignore  README.md  repack_iso.sh  run.sh
code/: Makefile  linker.ld
code/arch/: Makefile
code/arch/x86/: Makefile
code/arch/x86/boot/: boot.S  boot_main.c  boot_tty.c  font.psf
code/arch/x86/include/asm/: cpu_types.h  page_types.h
code/include/closureos/: types.h
code/include/graphics/font/: psf.h
code/kernel/: Makefile  main.c
docs/en/mm/: layout.md
docs/zh-cn/mm/: layout.md
scripts/: repack_iso.sh
src/: CMakeLists.txt
src/arch/: CMakeLists.txt
src/arch/x86/: CMakeLists.txt  linker.lds
src/arch/x86/boot/: CMakeLists.txt  boot.S  boot_main.c  boot_main.cpp  boot_mm.c  boot_mm.cpp  boot_str.c  boot_string.c  boot_tty.c
src/arch/x86/include/asm/: com.h  cpu_types.h  io.h  page_types.h  pgtable_types.h  trap.h
src/arch/x86/include/boot/: string.h  tty.h
src/include/boot/: multiboot2.h
src/include/closureos/: atomic.h  compiler.h  container.h  cpp_base.hpp  elf.h  err.h  errno.h  list.h  lock.h  types.h
src/include/closureos/mm/: layout.h  mm_types.h  pages.h  slub.h  slub.hpp
src/include/graphics/tty/: default.h
src/include/graphics/tty/font/: psf.h
src/kernel/: CMakeLists.txt  cxx_base_abi.cpp  main.c  main.cpp
src/kernel/base/: CMakeLists.txt  types.cppm
src/kernel/lib/: CMakeLists.txt  container.cppm  lib_main.cppm  types.cppm
src/kernel/lib/atomic/: CMakeLists.txt  atomic_main.cppm  lock.cpp
src/kernel/lib/container/: CMakeLists.txt  container.cppm
src/kernel/lib/list/: CMakeLists.txt  list_main.cppm
src/kernel/mm/: CMakeLists.txt  api.cppm  heap_mm.cppm  mm_init.c  mm_main.cppm  page_alloc.c  page_mm.cpp  page_mm.cppm  slub.c  types.cppm  virt_layout.cppm
targets/x86_64/iso/boot/: kernel.bin.id0  kernel.bin.id1  kernel.bin.id2  kernel.bin.nam
targets/x86_64/iso/boot/grub/: grub.cfg
tools/scripts/: boot.sh  repack_iso.sh
